tests/reference/asr-test_zero_division4-bf4af64.stderr
semantic error: division by zero is not allowed
 --> tests/errors/test_zero_division4.py:5:13
  |
5 |     print(f/0.0)
  |             ^^^ division by zero


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
